
2013-07-11 v0.0.1 clinton at omniti dot com
  * initial work
  * nad_script LWRP
  * configure (ports, conf dir) under ubuntu
  * install under ubuntu from omnibus tarball
  * centos planned in next release
