@@ -3,6 +3,8 @@ maintainer_email "sa@omniti.com"
 license          "Modified BSD"
 description      "nad (nodejs monitoring agent)"
 long_description IO.read(File.join(File.dirname(__FILE__), 'README.md'))
-version          "0.0.1"
+version          "0.0.2"
 name             "nad"
-supports         "ubuntu", ">= 12.04"    
+supports         "ubuntu", ">= 10"    
+supports         "centos", ">= 5"    
+supports         "rhel",   ">= 5"    
